feat: must ensure follow comedian is working
