# storage/api-docs/api-docs.json
@@ -98,6 +98,58 @@
                 ]
             }
         },
+        "/api/v1/user/follow": {
+            "post": {
+                "tags": [
+                    "user"
+                ],
+                "operationId": "FollowComedianController@handle",
+                "requestBody": {
+                    "description": "",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "comedianId"
+                                ],
+                                "properties": {
+                                    "comedianId": {
+                                        "type": "string",
+                                        "format": "",
+                                        "example": ""
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful Operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/ComedianResponse"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not found operation"
+                    }
+                },
+                "security": [
+                    {
+                        "token": []
+                    }
+                ]
+            }
+        },
         "/api/v1/comedian/{comedianId}": {
             "get": {
                 "tags": [
